MINOR: adding link to compute LaTeX file

--- a/Rapport_Groupe4.tex
+++ b/Rapport_Groupe4.tex
@@ -12,6 +12,7 @@
 Projet C++}
 \author{BERGER Thibault - SIZUN Pierre - TARLET Emilie - THAMBU Prathipan}
 \date{15 d\'ecembre 2015}
+\href{https://www.overleaf.com/3918882mrfmjh#/11323738/}{Lien pour exécuter le code LateX}
 \maketitle
 
 \begin{abstract}
